# InterMessage

./: .flake8  BotBase.py  DiscordBot.py  Logger.py  Message.py  README.md  TelegramBot.py  VkBot.py  _i18n.py  dodo.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  translator.py
Bots/: BotBase.py  DiscordBot.py  Logger.py  TelegramBot.py  VkBot.py
InterMessage/: InterMessage.py  Message.py
InterMessage/Bots/: BotBase.py  DiscordBot.py  Logger.py  TelegramBot.py  VkBot.py
docs/: API.rst  DiscordBot.rst  InterMessage.rst  Logger.rst  TelegramBot.rst  VkBot.rst  conf.py  index.rst
po/ru_RU/LC_MESSAGES/: IM.po
tests/: TestAttachment.py  TestCreateNodes.py  TestDisHandler.py  TestGetBot.py  TestValidate.py
tests/confs_for_create/: conf1.yaml  conf2.yaml
tests/confs_for_validate/: conf2.yaml  conf3.yaml  conf4.yaml
